[package]
name = "orbgame-api"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "API crate that provides additional base api and elements for OrbGame."
repository = "https://gitlab.redox-os.org/redox-os/orbgame"
license = "MIT"
keywords = ["games", "api"]
edition = "2018"

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git" }
orbtk = { git = "https://gitlab.redox-os.org/redox-os/orbtk.git" }
orbgame-utils = { version = "0.1.0", path = "../utils" }